[package]
name = "sfs"
version = "0.1.0"
authors = ["Caleb Boylan <calebboylan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = "0.3"
env_logger = "0.6.0"
bitfield = "0.13.2"
structopt = "0.3"

[dev-dependencies]
tempfile = "3.0"
